assets/css/style.css
/* ... */
.register .register-right .sale-buttons .btn-more,
.register .register-right .sale-buttons .btn-default {
  min-width: 58px;
  height: 35px;
  background-color: #F9FBFC;
  border: 1px solid #D7DCE5;
  -moz-border-radius: 3px;
  -webkit-border-radius: 3px;
  border-radius: 3px;
}
.register .register-right .sale-buttons .btn-more i,
.register .register-right .sale-buttons .btn-default i {
  line-height: 12px;
  font-size: 22px;
  color: #9398a0;
}
.register .register-right .sale-buttons .btn-group.open .dropdown-toggle.btn-suspended {
  background-color: #ffe5c3;
  border: 1px solid #ffc276;
}
.register .register-right .sale-buttons .btn-suspended {
  height: 35px;
  background-color: #FFF0DD;
  border: 1px solid #FFCD90;
  -moz-border-radius: 3px;
  -webkit-border-radius: 3px;
  border-radius: 3px;
  color: #FEAE4E;
  font-size: 12px;
  font-weight: 400;
  line-height: 20px;
}
.register .register-right .sale-buttons .btn-suspended:hover {
  background-color: #ffdaaa;
}
.register .register-right .sale-buttons .btn-cancel {
  height: 35px;
  background-color: #FFEAEA;
  border: 1px solid #FFA8A8;
  -moz-border-radius: 3px;
  -webkit-border-radius: 3px;
  border-radius: 3px;
  color: #FF7474;
  font-size: 12px;
  font-weight: 400;
  line-height: 20px;
}
.register .register-right .sale-buttons .btn-cancel:hover,
.register .register-right .sale-buttons .btn-cancel:focus {
  background-color: #ffb7b7;
}
.register .register-right .sale-buttons .btn-group.open .dropdown-toggle {
  background-color: #f2f6f9;
}
.register .register-right .customer-badge {
  padding: 7px 30px;
  border-bottom: 1px solid #E9ECF2;
  min-height: 80px;
  background-color: #FFFFFF;
}
.register .register-right .customer-badge.location {
  height: 60px;
}
.register .register-right .customer-badge .avatar {
  float: left;
  display: inline-block;
  width: 60px;
  height: 60px;
  overflow: hidden;
  flex-shrink: 0;
}
.register .register-right .customer-badge .avatar img {
  width: 100% !important;
  height: 100% !important;
  min-width: 100%;
  min-height: 100%;
  max-width: 100%;
  max-height: 100%;
  object-fit: cover;
  border-radius: 50%;
}
.register .register-right .customer-badge .details {
  padding: 0px;
  padding-left: 72px;
  text-align: left;
  padding-top: 10px;
  position: relative;
}
.register .register-right .customer-badge .details .name {
  font-weight: 400;
  font-size: 16px;
  text-decoration: none;
  display: block;
  text-transform: capitalize;
}
.register .register-right .customer-badge .details .name .balance,
.register .register-right .customer-badge .details .name .points {
  font-size: 12px;
}
.register .register-right .customer-badge .details .name:hover {
  color: #FFB800;
}
.register .register-right .customer-badge .details .email {
  color: #67676C;
  font-size: 10px;
  font-weight: 400;
}
.register .register-right .customer-badge .details .btn-edit {
  width: 47px;
  height: 36px;
  background-color: #F9FBFC;
  border: 1px solid #e9ebee;
  border-right-width: 0px;
  border-top-width: 0px;
  color: #FFB800;
  font-size: 18px;
  font-weight: 500;
  position: absolute;
  top: 0;
  right: 0;
  margin-top: -7px;
  margin-right: -30px;
}
.register .register-right .customer-badge.suggestions {
  border-left: 0px solid #d7dce5;
  border-right: 0	px solid #E9ECF2;
  height: 60px !important;
  padding: 7px 15px !important;
}
.register .register-right .customer-badge.suggestions .avatar {
  width: 35px;
  height: 35px;
  overflow: hidden;
  flex-shrink: 0;
}
.register .register-right .customer-badge.suggestions .avatar img {
  width: 100% !important;
  height: 100% !important;
  min-width: 100%;
  min-height: 100%;
  max-width: 100%;
  max-height: 100%;
  object-fit: cover;
  border-radius: 50%;
}
.register .register-right .customer-badge.suggestions:hover,
.register .register-right .customer-badge.suggestions.active,
.register .register-right .customer-badge.suggestions:focus {
  background-color: #f3f4f8;
}
.register .register-right .customer-badge.suggestions .details {
  padding-top: 5px;
  text-align: left;
  padding-left: 40px;
  line-height: 14px;
}
.register .register-right .customer-badge.suggestions .details .name {
  color: #FFD54F;
}
.register .register-right .customer-action-buttons a,
.register .register-right .customer-action-buttons label {
  padding: 5px;
  text-align: center;
  height: 50px;
  color: #67676C;
  font-size: 13px;
  font-weight: 400;
  text-transform: capitalize;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
  line-height: 30px;
  border-right: 1px solid #E9ECF2;
}
.register .register-right .customer-action-buttons a i,
.register .register-right .customer-action-buttons label i {
  color: #FF7474;
  font-size: 18px;
  font-weight: 500;
}
.register .register-right .customer-action-buttons a.checked i,
.register .register-right .customer-action-buttons label.checked i {
  color: #FFB800;
}
.register .register-right .customer-action-buttons a.checked i:before,
.register .register-right .customer-action-buttons label.checked i:before {
  content: "\f120";
}
.register .register-right .customer-action-buttons a.success i,
.register .register-right .customer-action-buttons label.success i {
  color: #FFB800;
}
.register .register-right .customer-action-buttons label {
  width: 100%;
}
.register .register-right .customer-form {
  text-align: center;
  padding: 20px;
}
.register .register-right .customer-form .input-group {
  width: 100%;
}
.register .register-right .customer-form .input-group .selectize-input,
.register .register-right .customer-form .input-group #customer,
.register .register-right .customer-form .input-group #supplier,
.register .register-right .customer-form .input-group #location {
  text-align: left;
  height: 40px !important;
  -webkit-appearance: none;
  border: 0px solid #D7DCE5;
}
/* ... */

